test/success/integration/_succ_expr_or_1.hs
x :: Bool
x = True || False
main = print "hello"