test/fail/integration/_fail_sem_expr_or_2.hs
x :: Bool
x = True || 4
main = print "hello"